# examination_service

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
main_app/: settings.py  urls.py
online_testing/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
online_testing/management/commands/: create_questionnaire.py
online_testing/migrations/: 0001_initial.py  0002_question_questionnaire_alter_optionanswer_options_and_more.py
online_testing/static/css/: signin.css
online_testing/templates/: index.html  login.html  logout.html  register.html
