[tool.poetry]
name = "examination-service"
version = "0.1.0"
description = ""
authors = ["Stanis96 <vasilievstas96@yandex.ru>"]
readme = "README.md"
packages = [{include = "examination_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-environ = "^0.9.0"
pre-commit = "^2.20.0"
psycopg2 = "^2.9.5"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^6.0.0"
pyproject-flake8 = "6.0.0"
flake8-black = "^0.3.3"
flake8-builtins = "^2.0.1"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = """
    ('
    |.idea/
    |.venv/
    |.vscode/
    ')
"""

# call using pflake8
[tool.flake8]
max-line-length = 100
max-complexity = 8
ignore = "A003, W503"
exclude = """
    .idea/
    .venv/
    .vscode/
    */migrations/
"""

[virtualenvs]
create = true
in-project = true
path = ".venv"
